# episteme

./: .gitignore  CONTRIBUTING.md  README.md  cliff.toml  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.autocatalyst/: impl-result.json
.eng-docs/adrs/: adr-001-tauri-desktop-framework.md  adr-002-tiptap-document-editor.md  adr-003-zustand-state-management.md  adr-004-tailwind-css-styling.md  adr-005-github-oauth-authentication.md  adr-006-zod-validation.md  adr-007-vitest-playwright-testing.md  adr-008-claude-skills-document-types.md  adr-009-keyboard-shortcuts.md  adr-010-radix-ui-primitives.md  adr-011-git-cliff-changelog.md  adr-012-modes-doc-types-processes.md  adr-013-document-content-boundary.md  adr-013-document-contents.md
.eng-docs/specs/: app.md  enhancement-ai-chat-panel-states.md  enhancement-ai-chat-session-history.md  enhancement-authoring-skill-picker.md  enhancement-badge-primitive.md  enhancement-chat-box-expansion.md  enhancement-code-rendering.md  enhancement-copy-paste.md  enhancement-design-kitchen-sink.md  (+30 more)
.episteme/: content.db
src/: App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: comments_types.rs  context.rs  db.rs  frontmatter.rs  lib.rs  main.rs  manifest_loader.rs  session.rs  skill_loader.rs  tool_catalog.rs
src-tauri/src/commands/: ai.rs  comment_ai_log.rs  comments.rs  files.rs  folder.rs  manifests.rs  mod.rs  preferences.rs  sessions.rs  skills.rs  updater.rs  window.rs
tests/: setup.ts
(+187 files in other folders)
